--- a/design_document/主体结构.md
+++ b/design_document/主体结构.md
@@ -6,58 +6,68 @@
 
 - 四个按钮的切换显示
 
-  在这里，这四个用来切换页面的按钮主要是使用了Button，而没有用RadioButton，因为使用RadioButton的时候不能重复点击
+  这里使用的是用RadioGroup嵌套4个RadioButton来实现的。
   - 布局代码如下：
-  
-        <LinearLayout
-            android:layout_width="0dp"
+ 
+        <RadioGroup
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:layout_gravity="center">
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
-            <Button
+            <RadioButton
                 android:id="@+id/rb_home"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
                 style="@style/Main_Button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:text="@string/home"
                 />
-            <Button
+
+            <RadioButton
                 android:id="@+id/rb_software"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
                 style="@style/Main_Button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
+                android:layout_weight="1"
                 android:text="@string/software"
                 />
-            <Button
+
+            <RadioButton
                 android:id="@+id/rb_game"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
                 style="@style/Main_Button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
+                android:layout_weight="1"
                 android:text="@string/game"
                 />
-            <Button
+
+            <RadioButton
                 android:id="@+id/rb_manager"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
                 style="@style/Main_Button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
+                android:layout_weight="1"
                 android:text="@string/manager"
                 />
-        </LinearLayout>
+
+        </RadioGroup>
         
   - 每个小Button前面的图片设置是通过加载drawable对象来实现
-  
-        int[] drawables = new int[] {
+ 
+        int[] drawables = new int[]{
                 R.drawable.select_home_drawable,
                 R.drawable.select_software_drawable,
                 R.drawable.select_game_drawable,
                 R.drawable.select_manager_drawable
         };
-        int[] rids = new int[] {
+        int[] rids = new int[]{
                 R.id.rb_home,
                 R.id.rb_software,
                 R.id.rb_game,
@@ -66,189 +76,151 @@
         Resources res = getResources();
         for (int i = 0; i < rids.length; i++) {
             Button rb = (Button) findViewById(rids[i]);
-            rb.setOnClickListener(this);
+            rb.setOnClickListener(new HomeItemClick());
             Drawable drawable = res.getDrawable(drawables[i]);
             drawable.setBounds(0, 0, Constants.DRAWABLE_SIZE, Constants.DRAWABLE_SIZE);
             rb.setCompoundDrawablePadding(Constants.DRAWABLE_PADDING);
             rb.setCompoundDrawables(drawable, null, null, null);
         }
         
-  - 每个Button的点击的颜色切换以及页面跳转。previousButton是记录的上一次的按钮，currentButton是当前的按钮，以此来进行选中背景的选择。点击点击点击每个条目的时候通过Handler来发消息序列，进而进行界面刷新。
-  
+  - 由于需要每次点击的时候都能进行刷新，舍弃了RadioGroup的OnCheckedChangeListener监听，改用每一个的OnClickListener监听。至于每一次的单选就采用RadioGrop的特性。
+ 
         class HomeItemClick implements View.OnClickListener {
             @Override
             public void onClick(View view) {
-                currentButton = (Button) view;
-                if (currentButton != previousButton) {
-                    currentButton.setTextColor(getResources().getColor(R.color.blue));
-                    if (previousButton != null) {
-                        previousButton.setTextColor(getResources().getColor(R.color.gray));
-                    }
-                    previousButton = currentButton;
-                    switch (view.getId()) {
-                        case R.id.rb_home:
-                            sendMessage(Constants.HOME_FRAGMENT, null);
-                            break;
-                        case R.id.rb_software:
-                            sendMessage(Constants.SOFTWARE_FRAGMENT, null);
-                            break;
-                        case R.id.rb_game:
-                            sendMessage(Constants.GAME_FRAGMENT, null);
-                            break;
-                        case R.id.rb_manager:
-                            sendMessage(Constants.MANAGER_FRAGMENT, null);
-                            break;
-                    }
+                switch (view.getId()) {
+                    case R.id.rb_home:
+                        mHandler.sendEmptyMessage(Constants.HOME_FRAGMENT);
+                        break;
+                    case R.id.rb_software:
+                        mHandler.sendEmptyMessage(Constants.SOFTWARE_FRAGMENT);
+                        break;
+                    case R.id.rb_game:
+                        mHandler.sendEmptyMessage(Constants.GAME_FRAGMENT);
+                        break;
+                    case R.id.rb_manager:
+                        mHandler.sendEmptyMessage(Constants.MANAGER_FRAGMENT);
+                        break;
+                }
+                if (!TextUtils.isEmpty(mSearchText.getText())) {
+                    mIsSearch = false;
+                    mSearchText.clearFocus();
+                    mSearchText.setText("");
                 }
             }
-        }
-        
-        public static void sendMessage(int what, String obj) {
-            mHandler.sendMessage(mHandler.obtainMessage(what, obj));
-        }
+     
 - Handler的各种传值进行数据刷新
 
   - 这是整个应用页面跳转的核心，下面来看一下它的具体逻辑
         
-        //初始化Handler
+        //初始化Handler，这里主要分为4类。一类负责刷新当前页面，一类负责子线程的弹土司，一类负责安装app，另外一类就是展示的各种fragment
         private void initHandler() {
-            mHandler = new Handler() {
-                @Override
-                public void handleMessage(Message msg) {
-                    super.handleMessage(msg);
-                    FragmentTransaction transaction = mManager.beginTransaction();
-                    BaseFragment fragment = null;
-                    switch (msg.what) {
-                        case Constants.HOME_FRAGMENT:
-                            fragment = mFragments.get(Constants.HOME_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new HomeFragment();
-                                mFragments.put(Constants.HOME_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-                            break;
-                        case Constants.SOFTWARE_FRAGMENT:
-                            fragment = mFragments.get(Constants.SOFTWARE_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new SoftwareFragment();
-                                mFragments.put(Constants.SOFTWARE_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-                            break;
-                        case Constants.GAME_FRAGMENT:
-                            fragment = mFragments.get(Constants.GAME_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new GameFragment();
-                                mFragments.put(Constants.GAME_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-                            break;
-                        case Constants.MANAGER_FRAGMENT:
-                            fragment = mFragments.get(Constants.MANAGER_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new ManagerFragment();
-                                mFragments.put(Constants.MANAGER_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-                            break;
-                        case Constants.DETAIL_FRAGMENT:
-                            fragment = mFragments.get(Constants.DETAIL_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new DetailFragment();
-                                mFragments.put(Constants.DETAIL_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-                            if (getData(msg) != null) {
-                                ((DetailFragment) fragment).setDatas((String) getData(msg));
-                            }
-                            break;
-                        case Constants.MORE_FRAGMENT:
-                            fragment = mFragments.get(Constants.MORE_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new MoreFragment();
-                                mFragments.put(Constants.MORE_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-    
-                            if (getData(msg) != null) {
-                                ((MoreFragment) fragment).setData((AppLayoutInfo) getData(msg));
-                            }
-                            break;
-                        case Constants.COMMENT_FRAGMENT:
-                            fragment = mFragments.get(Constants.COMMENT_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new CommentFragment();
-                                mFragments.put(Constants.COMMENT_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-    
-                            ((CommentFragment) fragment).setDatas(Constants.getComment());
-                            ((CommentFragment) fragment).setAll(true);
-                            break;
-                        case Constants.SEARCH_FRAGMENT:
-                            fragment = mFragments.get(Constants.SEARCH_FRAGMENT);
-                            if (fragment == null) {
-                                fragment = new SearchFragment();
-                                mFragments.put(Constants.SEARCH_FRAGMENT, fragment);
-                            }
-                            addFragment(transaction, fragment, msg.what);
-                            if (getData(msg) != null) {
-                                ((SearchFragment) fragment).setDatas((String) getData(msg));
-                            }
-                            break;
-                        case Constants.TOAST:
-                            Tools.toast(MainActivity.this, (String) msg.obj);
-                            break;
-                        case Constants.REFRESH:
-                            Fragment currentFragment = getCurrentFragment();
-                            if (currentFragment != null) {
-                                BaseFragment baseFragment = (BaseFragment) currentFragment;
-                                baseFragment.refresh();
-                            }
-                            break;
-                        case Constants.UPDATE:
-                            saveAllData();
-                            break;
-                    }
-                    if (msg.what != Constants.TOAST && msg.what != Constants.REFRESH
-                            && msg.what != Constants.UPDATE) {
-                        transaction.commit();
-                        mManager.executePendingTransactions();
-                        fragment.refresh();
-                    }
+        mHandler = new Handler() {
+            @Override
+            public void handleMessage(Message msg) {
+                super.handleMessage(msg);
+                switch (msg.what) {
+                    case Constants.REFRESH:
+                        Fragment currentFragment = getCurrentFragment();
+                        if (currentFragment != null) {
+                            ((BaseFragment) currentFragment).refresh();
+                        }
+                        break;
+                    case Constants.TOAST:
+                        Tools.toast(MainActivity.this, (String) msg.obj);
+                        break;
+                    case Constants.INSTALL_APK:
+                        installApk((String) msg.obj);
+                        break;
+                    default:
+                        showFragment(msg);
+                        break;
                 }
-            };
+            }
+        };
+
+        ／／这个主要是展示需要显示的fragment，用的是show和hide的方法
+        private void showFragment(Message msg) {
+            mTransaction = mManager.beginTransaction();
+            BaseFragment fragment = getFragment(msg);
+            if (fragment != null && !fragment.isAdded()) {
+               mTransaction.add(R.id.main_fragment_container, fragment, String.valueOf(msg.what));
+            }
+
+            if (mCurrentFragment == null) {
+               mTransaction.show(fragment);
+            } else if (mCurrentFragment != fragment) {
+                mTransaction.hide(mCurrentFragment).show(fragment);
+            }
+            mCurrentFragment = fragment;
+            mTransaction.commit();
+            mManager.executePendingTransactions();
+            if (mPages.size() < 1 || mPages.get(mPages.size() - 1) != msg.what) {
+                mPages.add(msg.what);
+            }
+            fragment.refresh();
+            mScrollView.scrollTo(0, 0); ／／将页面回到最上面
         }
     
-        //将要要显示的fragment加入事物管理器，并加上tag（what）
-        private void addFragment(FragmentTransaction transaction, Fragment fragment, int what) {
-            Fragment currentFragment = getCurrentFragment();
-            if (!fragment.isAdded()) {
-                transaction.add(R.id.main_fragment_container, fragment, what + "");
-            }
-            if (currentFragment != null) {
-                transaction.hide(currentFragment).show(fragment);
-            } else {
-                transaction.show(fragment);
-            }
-        }
-  
-        // 获得消息中携带的数据
-        private Object getData(Message msg) {
-            if (msg.obj != null) {
-                return msg.obj;
-            }
-            Bundle data = msg.getData();
-            if (data == null) {
-                return null;
-            }
+        //这一模块主要是根据穿过来的Message对象来获得需要显示的fragment以及获取显示fragment的加载数据
+        private BaseFragment getFragment(Message msg) {
+            BaseFragment fragment = (BaseFragment) mManager.findFragmentByTag(String.valueOf(msg.what));
+            mBack.setVisibility(View.VISIBLE);
             switch (msg.what) {
-                case Constants.MORE_FRAGMENT:
-                    return (AppLayoutInfo) data.getSerializable(Constants.APP_LAYOUT_INFO);
+                case Constants.HOME_FRAGMENT:
+                    mBack.setVisibility(View.GONE);
+                    if (fragment == null) {
+                    fragment = new HomeFragment(mAppInstallMap);
+                }
+                break;
+            case Constants.SOFTWARE_FRAGMENT:
+                mBack.setVisibility(View.GONE);
+                mSoftwareButton.setChecked(true);
+                if (fragment == null) {
+                    fragment = new SoftwareFragment(mAppInstallMap);
+                }
+                break;
+            case Constants.GAME_FRAGMENT:
+                mBack.setVisibility(View.GONE);
+                mGameButton.setChecked(true);
+                if (fragment == null) {
+                    fragment = new GameFragment(mAppInstallMap);
+                }
+                break;
+            case Constants.MANAGER_FRAGMENT:
+                mBack.setVisibility(View.GONE);
+                mManagerButton.setChecked(true);
+                if (fragment == null) {
+                    fragment = new ManagerFragment(mAppInstallMap);
+                }
+                break;
+            case Constants.DETAIL_FRAGMENT:
+                if (fragment == null) {
+                    fragment = new DetailFragment(mAppInstallMap);
+                }
+                fragment.setData(msg.obj);
+                break;
+            case Constants.MORE_FRAGMENT:
+                if (fragment == null) {
+                    fragment = new MoreFragment(mAppInstallMap);
+                }
+                fragment.setData(msg.obj);
+                break;
+            case Constants.COMMENT_FRAGMENT:
+                if (fragment == null) {
+                    fragment = new CommentFragment(mAppInstallMap);
+                }
+                break;
+            case Constants.SEARCH_FRAGMENT:
+                if (fragment == null) {
+                    fragment = new SearchFragment(mAppInstallMap);
+                }
+                fragment.setData(msg.obj);
+                break;
             }
-            return null;
+            return fragment;
         }
-  
+ 
 - 下载数据的保存结构
 
      这里是记录下载数据的保存结构，通过这里的数据每次启动AppStore时候有一个数据加载
@@ -270,3 +242,4 @@
                     + ")";
             db.execSQL(downloadsql);
          }
+
