--- a/design_document/页面回退.md
+++ b/design_document/页面回退.md
@@ -3,39 +3,64 @@
   - 涉及的主要类
     - package com.openthos.appstore.MainActivity
   - 主要实现
-  ***
-      //package com.openthos.appstore.MainActivity`
-      //这里的页面回退采用的不是fragment的栈管理，而是通过记录标记fragment的tag值来返回到哪一个页面
-      //在每次切换页面的时候给mpage添加新的值
-      private void addFragment(FragmentTransaction transaction, Fragment fragment, int what) {
-            if (mPage.size() > 1) {
-                if (mPage.get(mPage.size() - 1) != what) {
-                    mPage.add(what);
-                }
-            } else {
-                mPage.add(what);
-            }
-            Fragment currentFragment = getCurrentFragment();
-            if (!fragment.isAdded()) {
-                transaction.add(R.id.main_fragment_container, fragment, what + "");
-            }
-            if (currentFragment != null) {
-                transaction.hide(currentFragment).show(fragment);
-            } else {
-                transaction.show(fragment);
-            }
-        }
+    - 这里使用的是用一个集合来记录所加载过的页面
+      
+          private List<Integer> mPages;
+    - 往这个集合中添加元素，要确保最后一个元素和上一个界面不是同一个
+          
+          private void showFragment(Message msg) {
+              。。。。
+              if (mPages.size() < 1 || mPages.get(mPages.size() - 1) != msg.what) {
+                  mPages.add(msg.what);
+              }
+              。。。。
+          }
         
-        //当点击回退按钮的时候调以下方法，从mpage里取出上一个页面的值，然后加载
-        private void checked() {
-            if (mPage.size() > 1) {
-                mPage.remove(mPage.size() - 1);
-                Integer what = mPage.get(mPage.size() - 1);
-                if (what == Constants.SEARCH_FRAGMENT) {
-                    checked();
-                } else {
-                    mHandler.sendEmptyMessage(what);
+     - 当点击回退按钮的时候调以下方法，从mpage里取出上一个页面的值，然后加载
+         
+            @Override
+            public void onClick(View view) {
+                if (view.getId() == R.id.activity_title_back && mPages.size() > 1) {
+                    mPages.remove(mPages.size() - 1);
+                    mHandler.sendEmptyMessage(mPages.get(mPages.size() - 1));
+                    mPages.remove(mPages.size() - 1);
                 }
+                ....
             }
-        }
-  ***
+      - 在显示回退按钮的时候，如果当前是处于首页，游戏，软件和管理这四个主界面，要将回退按钮隐藏，不让其后退。
+      
+            private BaseFragment getFragment(Message msg) {
+                BaseFragment fragment = (BaseFragment) mManager.findFragmentByTag(String.valueOf(msg.what));
+                mBack.setVisibility(View.VISIBLE);
+                switch (msg.what) {
+                    case Constants.HOME_FRAGMENT:
+                        mBack.setVisibility(View.GONE);
+                        if (fragment == null) {
+                            fragment = new HomeFragment(mAppInstallMap);
+                        }
+                        break;
+                    case Constants.SOFTWARE_FRAGMENT:
+                        mBack.setVisibility(View.GONE);
+                        mSoftwareButton.setChecked(true);
+                        if (fragment == null) {
+                            fragment = new SoftwareFragment(mAppInstallMap);
+                        }
+                        break;
+                    case Constants.GAME_FRAGMENT:
+                        mBack.setVisibility(View.GONE);
+                        mGameButton.setChecked(true);
+                        if (fragment == null) {
+                            fragment = new GameFragment(mAppInstallMap);
+                        }
+                        break;
+                    case Constants.MANAGER_FRAGMENT:
+                        mBack.setVisibility(View.GONE);
+                        mManagerButton.setChecked(true);
+                        if (fragment == null) {
+                            fragment = new ManagerFragment(mAppInstallMap);
+                        }
+                        break;
+                    。。。。
+                }
+                return fragment;
+            }
