--- a/design_document/更新实现.md
+++ b/design_document/更新实现.md
@@ -1,75 +1,71 @@
 # 更新实现
-- 涉及的主要类
-  - package com.openthos.appstore.adapter.AppLayoutGridviewAdapter
-  - package com.openthos.appstore.bean.SQLAppInstallInfo
-  - package com.openthos.appstore.bean.AppLayoutGridviewInfo
-  - package com.openthos.appstore.utils.AppUtils
-  
+
 - 主要实现
-  - 首先需要获取本地已经安装的App目录
+  - 这个是判断当前App状态的主要方法
   ***
-      //package com.openthos.appstore.utils.AppUtils
-      //获取安装的app应用信息
-      public static List<SQLAppInstallInfo> getAppPackageInfo(Context context) throws
-                PackageManager.NameNotFoundException {
-    
-            List<SQLAppInstallInfo> datas = new ArrayList<>();
-            SQLAppInstallInfo appInfo = null;
-    
-            PackageManager packageManager = context.getPackageManager();
-            List<PackageInfo> pinfo = packageManager.getInstalledPackages(0);
-            for (int i = 0; i < pinfo.size(); i++) {
-                PackageInfo packageInfo = pinfo.get(i);
-    
-                String name = packageInfo.applicationInfo.loadLabel(packageManager).toString();
-                String packageName = packageInfo.packageName;
-                String versionName = packageInfo.versionName;
-                int versionCode = packageInfo.versionCode;
-                Drawable icon = packageInfo.applicationInfo.loadIcon(packageManager);
-                if ((packageInfo.applicationInfo.flags & ApplicationInfo.FLAG_SYSTEM) == 0) {
-                    appInfo = new SQLAppInstallInfo();
-                    appInfo.setId(i);
-                    appInfo.setIcon(icon);
-                    appInfo.setName(name);
-                    appInfo.setPackageName(packageName);
-                    appInfo.setVersionCode(versionCode + "");
-                    appInfo.setVersionName(versionName);
-                    appInfo.setState(Constants.APP_HAVE_INSTALLED);
-                    datas.add(appInfo);
+        public void initState() {
+            //和服务器上的数据进行对比，判断是否是需要更新的数据
+            for (int i = 0; i < mDatas.size(); i++) {
+                AppInstallInfo appInstallInfo = ((List<AppInstallInfo>) mDatas).get(i);
+                List<String> searchData = SPUtils.getSearchData(mContext, appInstallInfo.getName());
+                if (searchData.size() < 1) {
+                    appInstallInfo.setState(Constants.APP_NOT_EXIST);
+                    continue;
+                } else {
+                    for (int j = 0; j < searchData.size(); j++) {
+                        try {
+                            AppItemInfo appItemInfo = new AppItemInfo(new JSONObject(searchData.get(j)));
+                            if (appItemInfo.getPackageName().equals(appInstallInfo.getPackageName())) {
+                                appInstallInfo.setDownloadUrl(appItemInfo.getDownloadUrl());
+                                appInstallInfo.setIconUrl(appItemInfo.getIconUrl());
+                                appInstallInfo.setTaskId(appItemInfo.getTaskId());
+                                if (appInstallInfo.getVersionCode() < appItemInfo.getVersionCode()) {
+                                    appInstallInfo.setState(Constants.APP_NEED_UPDATE);
+                                } else {
+                                    appInstallInfo.setState(Constants.APP_HAVE_INSTALLED);
+                                }
+                                break;
+                            }
+                        } catch (JSONException e) {
+                            e.printStackTrace();
+                        }
+                    }
+                    if (appInstallInfo.getState() != Constants.APP_HAVE_INSTALLED
+                            && appInstallInfo.getState() != Constants.APP_NEED_UPDATE) {
+                        appInstallInfo.setState(Constants.APP_NOT_EXIST);
+                        continue;
+                    }
                 }
-            }
-            return datas;
-        }
-  ***
-  
-  - 从网络上请求到数据的时候判断这个app的状态，从而现实在界面上
-  ***
-      //package com.openthos.appstore.bean.AppLayoutGridviewInfo
-      //判断当前应用是不是已经安装，在比对版本信息
-      private int setState() {
-            for (SQLAppInstallInfo sqlAppInstallInfo : MainActivity.mAppPackageInfo) {
-                if (appPackageName.equals(sqlAppInstallInfo.getPackageName())) {
-                    if (versionName.equals(sqlAppInstallInfo.getVersionName())) {
-    
-                        return Constants.APP_HAVE_INSTALLED;
-                    } else {
-                        return Constants.APP_NEED_UPDATE;
+
+                //和本地下载列表进行对比，判断当前任务是否处于下载暂停状态或者是已经下载完成
+                DownloadInfo downloadInfo = new SQLOperator(mContext).
+                        getDownloadInfoByPkgName(appInstallInfo.getPackageName());
+                if (downloadInfo != null) {
+                    long downloadSize = downloadInfo.getDownloadSize();
+                    long fileSize = downloadInfo.getFileSize();
+                    if (downloadSize < fileSize) {
+                        appInstallInfo.setState(Constants.APP_DOWNLOAD_PAUSE);
+                    } else if (fileSize != 0 && downloadSize == fileSize) {
+                        switch (appInstallInfo.getState()) {
+                            case Constants.APP_HAVE_INSTALLED:
+                                break;
+                            default:
+                                appInstallInfo.setState(Constants.APP_DOWNLOAD_FINISHED);
+                                break;
+                        }
+                    }
+                }
+
+                //判断当前应用是否处于下载中
+                ArrayList<TaskInfo> allTask = mManager.getAllTask();
+                for (int j = 0; j < allTask.size(); j++) {
+                    TaskInfo taskInfo = allTask.get(j);
+                    if (appInstallInfo.getTaskId().equals(taskInfo.getTaskID())) {
+                        if (taskInfo.isOnDownloading()) {
+                            appInstallInfo.setState(Constants.APP_DOWNLOAD_CONTINUE);
+                        }
                     }
                 }
             }
-            return Constants.APP_NOT_INSTALL;
         }
   ***
-  
-  - 数据加载
-  ***
-          //package com.openthos.appstore.adapter.AppLayoutGridviewAdapter
-          //加载之前再重新设置一下状态，主要是判断当前任务是否正在进行
-           if (((MainActivity) mContext).isFirstInit
-                    && appInfo.getState() == Constants.APP_NEED_UPDATE) {
-                ((MainActivity) mContext).isFirstInit = false;
-                SPUtils.saveDownloadState(mContext, appInfo.getAppPackageName(), appInfo.getState());    
-            }
-            appInfo.setState(SPUtils.getDownloadState(mContext, appInfo.getAppPackageName()));
-  ***
-  
