--- a/design_document/首页轮播图加载.md
+++ b/design_document/首页轮播图加载.md
@@ -1,11 +1,11 @@
 # 首页轮播图加载
 
 - 涉及的主要类
-  - package com.openthos.appstore.view.CarouselFigure
+  - package com.openthos.appstore.view.BannerView
 - 主要实现
-***
-    //package com.openthos.appstore.view.CarouselFigure
-        // 获取需要轮播的数据图片网址，type是加载布局要指定的类型
+    
+  - 获取需要轮播的数据图片网址，type是加载布局要指定的类型
+  ***
         public void setImageUrls(List<CarouseFigureInfo.CarouseFigurUrl> imgUrls, int type) {
             if (imgUrls != null) {
                 mImageUrls = imgUrls;
@@ -15,9 +15,11 @@
             }
     
         }
-        
-        // 加载相同图片数量的点
-        private void initImageDots() {
+   ***
+   
+   - 加载相同图片数量的点
+   ***
+       private void initImageDots() {
             int mCount = mImageUrls.size();
             for (int i = 0; i < mCount; i++) {
                 ImageView iv_dot = new ImageView(mContext);
@@ -32,9 +34,11 @@
             }
             mImageDots.get(0).setImageResource(R.drawable.dot_focus);
         }
-        
-        //  自动刷新
-        private final Runnable task = new Runnable() {
+    ***
+    
+   - 自动刷新
+   ***
+       private final Runnable task = new Runnable() {
             @Override
             public void run() {
                 if (mIsAutoPlay) {
@@ -46,12 +50,14 @@
                 }
             }
         };
-        
-        //轮播图片加载适配器
-        class CarouselPagerAdapter extends PagerAdapter {
+   ***
+   
+   - 轮播图片加载适配器
+   ***
+       class BannerPagerAdapter extends PagerAdapter {
             @Override
             public int getCount() {
-                return mCount * 3;
+                return Integer.MAX_VALUE;
             }
     
             @Override
@@ -61,39 +67,25 @@
     
             @Override
             public Object instantiateItem(ViewGroup container, int position) {
-                View ret = null;
-                switch (mType) {
-                    case Constants.CAROUSEL_FIGURE_HOME:
-                        ret = LayoutInflater.from(mContext).
-                                inflate(R.layout.carousel_home, container, false);
-                        break;
-                    case Constants.CAROUSEL_FIGURE_DETAIL:
-                        ret = LayoutInflater.from(mContext).
-                                inflate(R.layout.carousel_detail, container, false);
-                        break;
-                    default:
-                        break;
-                }
-    
-                ViewHolder holder = new ViewHolder(ret);
+                View view = LayoutInflater.
+                        from(mContext).inflate(R.layout.banner_item, container, false);
+                ViewHolder holder = new ViewHolder(view);
                 if (mCount >= 3) {
-                    ImageCache.loadImage(holder.carouselImg1,
+                    ImageCache.loadImage(holder.bannerImg1,
                             mImageUrls.get(position % mCount).getImgUrl());
-                    ImageCache.loadImage(holder.carouselImg2,
+                    ImageCache.loadImage(holder.bannerImg2,
                             mImageUrls.get((position + 1) % mCount).getImgUrl());
-                    ImageCache.loadImage(holder.carouselImg3,
+                    ImageCache.loadImage(holder.bannerImg3,
                             mImageUrls.get((position + 2) % mCount).getImgUrl());
                 }
-                container.addView(ret);
-                return ret;
+                container.addView(view);
+                return view;
             }
     
             @Override
             public void destroyItem(ViewGroup container, int position, Object object) {
                 container.removeView((View) object);
             }
-        }
-        
-        
-***
+        }      
+    ***
   
