--- a/design_document/应用操作.md
+++ b/design_document/应用操作.md
@@ -2,27 +2,41 @@
 
 - 主要涉及的类
   - package com.openthos.appstore.utils.AppUtils
+  - package com.openthos.appstore.MainActivity
 - 实现方法
-  ***
-        //卸载应用，这里是调用的设置界面
-        String pkgName = (sqlAppInstallInfo).getPackageName();
-        Uri uri = Uri.parse("package:" + pkgName);
-        Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS, uri);
-        intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-        mContext.startActivity(intent);    
-                
-        //安装应用
-        public static String installApk(Context mContext, String saveFileName) {
-            File apkfile = new File(saveFileName);
-            if (!apkfile.exists() || apkfile.length() == 0) {
-                return mContext.getString(R.string.this_file_is_not_exist);
-            }
-            Intent intent = new Intent(Intent.ACTION_VIEW);
+  
+     - 卸载应用，这里是调用的设置界面
+     ***
+         public static void uninstallApk(Context context, String packageName) {
+            Uri uri = Uri.parse("package:" + packageName);
+            Intent intent = new Intent(Settings.ACTION_APPLICATION_DETAILS_SETTINGS, uri);
             intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
             intent.addFlags(Intent.FLAG_ACTIVITY_MULTIPLE_TASK);
-            intent.setDataAndType(Uri.parse("file://" + apkfile.toString()),
-                    "application/vnd.android.package-archive");
-            mContext.startActivity(intent);
-            return "";
-        }
-  ***
+            context.startActivity(intent);
+         }
+     ***          
+     - 打开应用
+        ****
+           public static void openApp(Context context, String appPackageName) {
+                Intent intent = context.getPackageManager().getLaunchIntentForPackage(appPackageName);
+                intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+                context.startActivity(intent);
+            }
+        ***
+     - 安装应用
+        ****
+            //在MainActivity里定义的方法
+            private void installApk(String apkFilePath) {
+                File apkFile = new File(apkFilePath);
+                if (!apkFile.exists() || apkFile.length() == 0) {
+                    Tools.toast(this, getString(R.string.this_file_is_not_exist));
+                } else {
+                    Intent intent = new Intent(Intent.ACTION_VIEW);
+                    intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+                    intent.addFlags(Intent.FLAG_ACTIVITY_MULTIPLE_TASK);
+                    intent.setDataAndType(Uri.parse("file://" + apkFile.toString()),
+                            "application/vnd.android.package-archive");
+                    startActivity(intent);
+                }
+            }
+        ***
